src/pages/es/v1.27.0/product-analytics/data-management.mdx
---
title: "Gestión de datos"
metaTitle: "Gestión de datos - OpenReplay"
metaDescription: "Rastrea eventos personalizados y propiedades de usuario para potenciar tu análisis de producto en OpenReplay."
---

La Gestión de datos en OpenReplay te permite rastrear eventos personalizados y propiedades de usuario para potenciar tu análisis de producto. Esta página cubre tanto la integración del SDK para enviar datos como la interfaz de usuario para gestionarlos.

Para la documentación completa del SDK, consulta la [referencia del Analytics SDK](/sdk/analytics).

## Resumen de eventos

OpenReplay captura dos tipos de eventos:

- **Eventos capturados automáticamente**: Interacciones rastreadas de forma automática como vistas de página, clics y envíos de formularios
- **Eventos personalizados**: Eventos específicos de tu dominio que tú defines, como "compra completada" o "función habilitada"

Los eventos personalizados te permiten rastrear las acciones específicas de usuario que importan a tu negocio y usarlas en funciones de análisis como [Tendencias](/product-analytics/trends), [Embudos](/product-analytics/funnels) y [Recorridos](/product-analytics/journeys).

## Captura de eventos

Para rastrear eventos personalizados, usa el módulo de eventos de analítica del SDK. Para la documentación completa de la API, consulta la [referencia del Events SDK](/sdk/analytics/events).

### Ejemplo básico

```ts
// Track a simple event
tracker.analytics.events.sendEvent("Button Clicked", {
  button_text: "Start",
  page: "home",
})
```

### Super propiedades

Las super propiedades son pares clave/valor persistentes que se adjuntan automáticamente a cada evento rastreado:

```ts
// Set super properties that apply to all events
tracker.analytics.events.setProperty({
  app_version: "1.42.0",
  env: "prod",
})

// This event will include app_version and env automatically
tracker.analytics.events.sendEvent("Signup Started", {
  plan: "pro",
})
```

## Enriquecimiento de usuarios

Las propiedades de usuario te permiten almacenar atributos sobre tus usuarios para la segmentación y el análisis. Para la documentación completa de la API, consulta la [referencia del People SDK](/sdk/analytics/people).

### Identificación de usuarios

```ts
// Identify the current user
tracker.analytics.people.identify("user_123")

// Set user properties
tracker.analytics.people.setProperties({
  email: "user@example.com",
  plan: "pro",
})
```

### Tipos de propiedades

OpenReplay admite varios tipos de propiedades:

| Tipo | Descripción | Ejemplos |
|------|-------------|----------|
| **Rastreadas automáticamente** | Capturadas de forma automática por el SDK | Dispositivo, navegador, SO, parámetros UTM, referente |
| **Especiales** | Propiedades especiales con un comportamiento definido | `$user_id`, `$email`, `$name` |
| **Personalizadas** | Propiedades definidas por el usuario | `plan type`, `company`, `signup date` |

## Gestión de datos en la interfaz de usuario

OpenReplay ofrece una interfaz de Gestión de datos para explorar, filtrar y organizar tus usuarios, eventos y sus respectivas propiedades.

### Personas

<img src="/data-management/people-page.png" alt="Página de eventos" style={{ width: '700px', height: 'auto' }} />

La pestaña Personas ofrece una vista de tus usuarios identificados:

- Explora los usuarios y sus propiedades
- Busca por ID de usuario o valores de propiedades
- Visualiza la actividad del usuario y el historial de sesiones
- Accede a los perfiles individuales de los usuarios

### Eventos

<img src="/data-management/events-page.png" alt="Página de eventos" style={{ width: '700px', height: 'auto' }} />

La pestaña Eventos muestra todos los tipos de eventos rastreados en tu proyecto:

- Explora y busca eventos por nombre
- Filtra por tipo de evento (capturados automáticamente frente a personalizados)
- Edita los metadatos del evento (nombre para mostrar, descripción)
- Controla la visibilidad del evento en los paneles y filtros

### Propiedades

<img src="/data-management/props-page.png" alt="Página de eventos" style={{ width: '700px', height: 'auto' }} />

La pestaña Propiedades te permite gestionar tanto las propiedades de usuario como las de eventos:

- Alterna entre las propiedades de usuario y las propiedades de eventos
- Visualiza los tipos de propiedades y las distribuciones de valores
- Edita los nombres para mostrar de las propiedades
- Controla la visibilidad de las propiedades en los paneles y filtros 

### Actividad

<img src="/data-management/activity-page.png" alt="Página de eventos" style={{ width: '700px', height: 'auto' }} />

La pestaña Actividad muestra un flujo en tiempo real de eventos:

- Monitorea los eventos a medida que se ingieren
- Filtra por tipo de evento o usuario
- Verifica que los eventos se estén capturando correctamente

### Segmentos

Los Segmentos te permiten agrupar varios eventos en una única colección reutilizable con un nombre y una descripción personalizados. En lugar de seleccionar eventos individuales cada vez, puedes definir un Segmento una sola vez y usarlo en todo OpenReplay.

<img src="/data-management/segments-list.png" alt="Lista de segmentos" style={{ width: '700px', height: 'auto' }} />

Para crear un Segmento:

1. Ve a la pestaña **Segments** en Gestión de datos
2. Haz clic en **Create**
3. Cambia el nombre y establece la visibilidad
4. Selecciona los eventos y filtros que se incluirán en la colección
5. Crea el Segmento

Una vez creados, los Segmentos se pueden usar en:

- **Sessions** — filtra las sesiones por Segmento, de forma similar a una búsqueda guardada, para encontrar rápidamente la actividad de usuario relevante
- **Cards** — usa un Segmento como filtro en tus cards

<img src="/data-management/segments-search.png" alt="Uso de Segmentos en la búsqueda de sesiones" style={{ width: '700px', height: 'auto' }} />

### Funcionalidades

Las Funcionalidades te permiten inspeccionar visualmente un elemento de una grabación de sesión y etiquetarlo, de modo que puedas hacer un seguimiento sencillo de los clics reutilizándolo en otras partes de la aplicación.

<img src="/data-management/features-create.png" alt="Creación de una funcionalidad" style={{ width: '700px', height: 'auto' }} />

Para crear una Funcionalidad:

1. Reproduce una grabación y luego haz clic en la pestaña **Tag** en la esquina superior derecha
2. Usa el ratón para seleccionar/etiquetar un elemento visual de la reproducción. Una vez seleccionado el elemento, su selector CSS se rellenará automáticamente. Puedes cambiarlo si es necesario.
3. Ignora los clics muertos (dead clicks) o de rabia (rage clicks) cuando se produzcan
4. Selecciona el alcance (registrar los clics en toda la aplicación o solo en la página mostrada en la reproducción)
5. Guarda la Funcionalidad

Tus Funcionalidades se pueden gestionar en una sección dedicada:

<img src="/data-management/features-list.png" alt="Lista de funcionalidades" style={{ width: '700px', height: 'auto' }} />

Una vez creadas, las Funcionalidades se pueden usar en:

- **Sessions** — filtra las sesiones por Funcionalidad, de forma similar a una búsqueda guardada, para encontrar rápidamente la actividad de usuario relevante
- **Cards** — usa una Funcionalidad como filtro en tus cards

<img src="/data-management/features-search.png" alt="Uso de Funcionalidades en la búsqueda de sesiones" style={{ width: '700px', height: 'auto' }} />

### Alias compatibles con Mixpanel

Todos los métodos cuentan con una capa de compatibilidad para mayor familiaridad:

```ts
tracker.analytics.people.set            // setProperties
tracker.analytics.people.set_once       // setPropertiesOnce
tracker.analytics.people.append         // appendValues
tracker.analytics.people.union          // appendUniqueValues
tracker.analytics.people.incrementBy    // increment
tracker.analytics.events.register       // setProperty
tracker.analytics.events.register_once  // setPropertiesOnce
tracker.analytics.events.unregister     // unsetProperties
tracker.analytics.events.track          // sendEvent
```

## ¿Tienes preguntas?

Si encuentras algún problema, conéctate a nuestro [Slack](https://slack.openreplay.com) o visita nuestro [Foro](https://forum.openreplay.com) y obtén ayuda de nuestra comunidad.
